<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="developer.celio.com.br.Presentation.HistoricoLeitura">

    <ScrollView
        android:id="@+id/sclHistoricoLeitura"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/txNomeLivro_HistoricoLeitura"
                android:id="@+id/txtNomeLivroHistoricoLeitura"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txCapitulos_HistoricoLeitura"
                android:id="@+id/txtCapitulosHistoricoLeitura"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="5dp"
                android:text="@string/txCapLido_HistoricoLeitura"
                android:id="@+id/txtCapLido"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:ems="10"
                android:id="@+id/edtCapituloLido" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txComentario_HistoricoLeitura"
                android:id="@+id/txtComentario"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="19dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtComentario"
                android:hint="..." />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btSalvar_HistoricoLeitura"
                android:id="@+id/btnSalvarHistorico"
                android:onClick="onClickSalvarHistorico"
                android:layout_marginTop="15dp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
